# real-estate-agent

./: .gitignore  Dockerfile  Result_14.csv  agent.py  airflow.Dockerfile  airflow_db_connection.py  docker-compose.yaml  etl_script.py  notebook.ipynb  properties.db  pyproject.toml  requirements.txt  streamlit.Dockerfile  table.sql
dags/: dags.py
notebooks/: notebook.ipynb  pazar3_nlq.ipynb  pazar3_scraping_notebook.ipynb  perf_eval.ipynb  sql-agent.ipynb
