[tool.poetry]
name = "diplomska"
version = "0.1.0"
description = ""
authors = ["mariopetkoski <mariopetkoski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
langchain-ollama = "^0.1.1"
langchain = "^0.2.12"
langchain-community = "^0.2.11"
pandas = "^2.2.2"
jupyter = "^1.0.0"
psycopg2-binary = "^2.9.9"
lxml = "^5.3.0"
tqdm = "^4.66.5"
openai = "^1.47.1"
langchainhub = "^0.1.21"
langgraph = "^0.2.27"
apache-airflow = "^2.10.2"
streamlit = "^1.39.0"
gradio = "^5.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
